# backpack-conditional-demo

./: .gitignore  ChangeLog.md  README.md  hie.yaml  stack.yaml
backpack-single/: ChangeLog.md  README.md  backpack-single.cabal
backpack-single/src-core/: CoreTypes.hs
backpack-single/src-impls/ModA/: Dummy.hs  Impl.hs
backpack-single/src-sigs/: Lib.hs
only-rexported-modules/: backpack-conditional-demo.cabal
only-rexported-modules/app/: Main.hs
only-rexported-modules/sigs/: ModA.hsig
only-rexported-modules/src/: Lib.hs
separate-backpacks/: cabal.project  hie.yaml  stack.yaml
separate-backpacks/separate-core/: ChangeLog.md  separate-core.cabal
separate-backpacks/separate-impl/: ChangeLog.md  README.md  separate-impl.cabal
separate-backpacks/separate-impl/src/ModB/: Dummy.hs  Impl.hs
separate-backpacks/separate-sigs/: README.md  separate-sigs.cabal
separate-backpacks/separate-sigs/src/: ModA.hsig  ModB.hsig
sigs/: ModB.hsig
src/ModA/: Dummy.hs  Enabled.hs
src/ModB/: Dummy.hs  Enabled.hs
