cabal-version: 2.0

name:           separate-impl
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/separate-impl#readme>
homepage:       https://github.com/githubuser/separate-impl#readme
bug-reports:    https://github.com/githubuser/separate-impl/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2020 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/separate-impl

flag build-A
  description: Build A
  manual: True
  default: False

flag build-B
  description: Build B
  manual: True
  default: False

library
  other-modules:
      Paths_separate_impl
  hs-source-dirs:
      src
  build-depends:
      base, separate-core
  if flag(build-A)
    exposed-modules: ModA.Impl
    reexported-modules: ModA.Impl as ModA
  else
    exposed-modules: ModA.Dummy
    reexported-modules: ModA.Dummy as ModA
  if flag(build-B)
    exposed-modules: ModB.Impl
    reexported-modules: ModB.Impl as ModB
  else
    exposed-modules: ModB.Dummy
    reexported-modules: ModB.Dummy as ModB
  default-language: Haskell2010

executable separate-impl-exe
  main-is: Main.hs
  other-modules:
      Paths_separate_impl
  hs-source-dirs:
      app
  build-depends:
      base
    , separate-impl
    , separate-sigs
  default-language: Haskell2010
