cabal-version: 2.0

name:           separate-sigs
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/separate-sigs#readme>
homepage:       https://github.com/githubuser/separate-sigs#readme
bug-reports:    https://github.com/githubuser/separate-sigs/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2020 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/separate-sigs

library
  exposed-modules:
      Lib
  other-modules:
      Paths_separate_sigs
  signatures:
      ModA
    , ModB
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , separate-core
  default-language: Haskell2010
